# simple-mcp-server-nso

./: .gitignore  README.md  main.py  pyproject.toml  systemctl-script.txt  tools.py
